# TrafficSimulator

./: .gitattributes  .gitignore  CMakeLists.txt  beta_values.csv  build.sh  readme.md
OpenGL/: mainOpenGL  mainOpenGL.cpp  opengl
data/: beta_values.csv  points.txt
docs/: adaptative_acceleration.tex  curvature.tex  free_acceleration.tex  traffic_equation.tex
include/: bicycle.h  car.h  intersection.h  motorcycle.h  point.h  road.h  traffic_manager.h  truck.h  vehicle.h
model/: adaptative_acceleration.py  beta_vmax_function.py  free_speed_model.py  free_speed_model_evaluation.py  freeway.py  poly_beta_fit.py  virage.py
model/accelerations/: free_acceleration.py
model/cpp testing/: points.py
model/modelisation/: accelerationtime_per_unit_v.py  free_acceleration_vs_vmax.py  free_speed_model_evaluation.py  speed_ratio_vs_k.py  traffic_density.py
src/: bicycle.cpp  car.cpp  intersection.cpp  main  main.cpp  motorcycle.cpp  point.cpp  road.cpp  traffic_manager.cpp  truck.cpp  vehicle.cpp  vehicule.cpp
